exports[`test should accept custom classes thru classes prop 1`] = `
<Layout
  accounts={
    Array [
      Object {
        "value": "main fund",
      },
    ]
  }
  classes="test1 test2"
  preFill={[Function]}
  state={
    Object {
      "fund": "main",
      "id": "test",
    }
  }>
  <div>
    <div
      className="display-inline-block push-half-bottom h3 push-half-right test1 test2">
      and give to
    </div>
    <Select
      classes={
        Array [
          "soft-bottom",
          "display-inline-block",
          "select_1rryh47",
        ]
      }
      deselect={true}
      hideLabel={true}
      id="test_select"
      includeBlank={true}
      inputClasses="test1 test2 outlined--dotted outlined--light h3 hard-top flush-bottom"
      items={
        Array [
          Object {
            "value": "main fund",
          },
        ]
      }
      name="select-account"
      placeholder="select fund">
      <div
        className="input soft-bottom display-inline-block select_1rryh47 select_15p0e27">
        <select
          className="test1 test2 outlined--dotted outlined--light h3 hard-top flush-bottom"
          id="test_select"
          name="select-account"
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="select fund">
          <option
            style={
              Object {
                "display": "none",
              }
            }>
            select fund
          </option>
          <option />
          <option
            value="main fund">
            main fund
          </option>
        </select>
      </div>
    </Select>
    <RenderAmountInput
      classes="test1 test2"
      preFill={[Function]}
      state={
        Object {
          "fund": "main",
          "id": "test",
        }
      }>
      <div
        className="display-block">
        <h3
          className="test1 test2 push-half-bottom push-half-right display-inline-block">
          with
        </h3>
        <Input
          classes={
            Array [
              "soft-bottom",
              "input--active",
              "display-inline-block",
            ]
          }
          hideLabel={true}
          id="test"
          inputClasses="outlined--dotted outlined--light h3 hard-top flush-bottom text-dark-primary show-placeholder_1bkmqm1"
          name="main"
          placeholder="$0.00"
          style={
            Object {
              "maxWidth": "150px",
            }
          }
          type="tel">
          <div
            className="input soft-bottom input--active display-inline-block"
            data-spec="input-wrapper"
            style={
              Object {
                "maxWidth": "150px",
              }
            }>
            <RenderLabel
              hideLabel={true}
              id="test"
              name="main" />
            <input
              className="outlined--dotted outlined--light h3 hard-top flush-bottom text-dark-primary show-placeholder_1bkmqm1"
              data-spec="input"
              id="test"
              maxLength=""
              name="main"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="$0.00"
              style={
                Object {
                  "maxWidth": "150px",
                }
              }
              type="tel" />
          </div>
        </Input>
      </div>
    </RenderAmountInput>
  </div>
</Layout>
`;

exports[`test should accept format function thru prop 1`] = `
<Layout
  accounts={
    Array [
      Object {
        "value": "main fund",
      },
    ]
  }
  format={[Function]}
  preFill={[Function]}
  state={
    Object {
      "fund": "main",
      "id": "test",
    }
  }>
  <div>
    <div
      className="display-inline-block push-half-bottom h3 push-half-right undefined">
      and give to
    </div>
    <Select
      classes={
        Array [
          "soft-bottom",
          "display-inline-block",
          "select_1rryh47",
        ]
      }
      deselect={true}
      hideLabel={true}
      id="test_select"
      includeBlank={true}
      inputClasses="undefined outlined--dotted outlined--light h3 hard-top flush-bottom"
      items={
        Array [
          Object {
            "value": "main fund",
          },
        ]
      }
      name="select-account"
      placeholder="select fund">
      <div
        className="input soft-bottom display-inline-block select_1rryh47 select_15p0e27">
        <select
          className="undefined outlined--dotted outlined--light h3 hard-top flush-bottom"
          id="test_select"
          name="select-account"
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="select fund">
          <option
            style={
              Object {
                "display": "none",
              }
            }>
            select fund
          </option>
          <option />
          <option
            value="main fund">
            main fund
          </option>
        </select>
      </div>
    </Select>
    <RenderAmountInput
      format={[Function]}
      preFill={[Function]}
      state={
        Object {
          "fund": "main",
          "id": "test",
        }
      }>
      <div
        className="display-block">
        <h3
          className="undefined push-half-bottom push-half-right display-inline-block">
          with
        </h3>
        <Input
          classes={
            Array [
              "soft-bottom",
              "input--active",
              "display-inline-block",
            ]
          }
          format={[Function]}
          hideLabel={true}
          id="test"
          inputClasses="outlined--dotted outlined--light h3 hard-top flush-bottom text-dark-primary show-placeholder_1bkmqm1"
          name="main"
          placeholder="$0.00"
          style={
            Object {
              "maxWidth": "150px",
            }
          }
          type="tel">
          <div
            className="input soft-bottom input--active display-inline-block"
            data-spec="input-wrapper"
            style={
              Object {
                "maxWidth": "150px",
              }
            }>
            <RenderLabel
              hideLabel={true}
              id="test"
              name="main" />
            <input
              className="outlined--dotted outlined--light h3 hard-top flush-bottom text-dark-primary show-placeholder_1bkmqm1"
              data-spec="input"
              id="test"
              maxLength=""
              name="main"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="$0.00"
              style={
                Object {
                  "maxWidth": "150px",
                }
              }
              type="tel" />
          </div>
        </Input>
      </div>
    </RenderAmountInput>
  </div>
</Layout>
`;

exports[`test should accept inputVal thru prop 1`] = `
<Layout
  accounts={
    Array [
      Object {
        "value": "main fund",
      },
    ]
  }
  inputVal="5.00"
  preFill={[Function]}
  state={
    Object {
      "fund": "main",
      "id": "test",
    }
  }>
  <div>
    <div
      className="display-inline-block push-half-bottom h3 push-half-right undefined">
      and give to
    </div>
    <Select
      classes={
        Array [
          "soft-bottom",
          "display-inline-block",
          "select_1rryh47",
        ]
      }
      deselect={true}
      hideLabel={true}
      id="test_select"
      includeBlank={true}
      inputClasses="undefined outlined--dotted outlined--light h3 hard-top flush-bottom"
      items={
        Array [
          Object {
            "value": "main fund",
          },
        ]
      }
      name="select-account"
      placeholder="select fund">
      <div
        className="input soft-bottom display-inline-block select_1rryh47 select_15p0e27">
        <select
          className="undefined outlined--dotted outlined--light h3 hard-top flush-bottom"
          id="test_select"
          name="select-account"
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="select fund">
          <option
            style={
              Object {
                "display": "none",
              }
            }>
            select fund
          </option>
          <option />
          <option
            value="main fund">
            main fund
          </option>
        </select>
      </div>
    </Select>
    <RenderAmountInput
      inputVal="5.00"
      preFill={[Function]}
      state={
        Object {
          "fund": "main",
          "id": "test",
        }
      }>
      <div
        className="display-block">
        <h3
          className="undefined push-half-bottom push-half-right display-inline-block">
          with
        </h3>
        <Input
          classes={
            Array [
              "soft-bottom",
              "input--active",
              "display-inline-block",
            ]
          }
          hideLabel={true}
          id="test"
          inputClasses="outlined--dotted outlined--light h3 hard-top flush-bottom text-dark-primary show-placeholder_1bkmqm1"
          name="main"
          placeholder="$0.00"
          style={
            Object {
              "maxWidth": "150px",
            }
          }
          type="tel"
          value="5.00">
          <div
            className="input input--active soft-bottom input--active display-inline-block"
            data-spec="input-wrapper"
            style={
              Object {
                "maxWidth": "150px",
              }
            }>
            <RenderLabel
              hideLabel={true}
              id="test"
              name="main" />
            <input
              className="outlined--dotted outlined--light h3 hard-top flush-bottom text-dark-primary show-placeholder_1bkmqm1"
              data-spec="input"
              id="test"
              maxLength=""
              name="main"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="$0.00"
              style={
                Object {
                  "maxWidth": "150px",
                }
              }
              type="tel" />
          </div>
        </Input>
      </div>
    </RenderAmountInput>
  </div>
</Layout>
`;

exports[`test should accept multiple accounts through accounts prop 1`] = `
<Layout
  accounts={
    Array [
      Object {
        "value": "hello",
      },
      Object {
        "value": "world",
      },
    ]
  }
  preFill={[Function]}
  state={
    Object {
      "fund": "main",
      "id": "test",
    }
  }>
  <div>
    <div
      className="display-inline-block push-half-bottom h3 push-half-right undefined">
      and give to
    </div>
    <Select
      classes={
        Array [
          "soft-bottom",
          "display-inline-block",
          "select_1rryh47",
        ]
      }
      deselect={true}
      hideLabel={true}
      id="test_select"
      includeBlank={true}
      inputClasses="undefined outlined--dotted outlined--light h3 hard-top flush-bottom"
      items={
        Array [
          Object {
            "value": "hello",
          },
          Object {
            "value": "world",
          },
        ]
      }
      name="select-account"
      placeholder="select fund">
      <div
        className="input soft-bottom display-inline-block select_1rryh47 select_15p0e27">
        <select
          className="undefined outlined--dotted outlined--light h3 hard-top flush-bottom"
          id="test_select"
          name="select-account"
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="select fund">
          <option
            style={
              Object {
                "display": "none",
              }
            }>
            select fund
          </option>
          <option />
          <option
            value="hello">
            hello
          </option>
          <option
            value="world">
            world
          </option>
        </select>
      </div>
    </Select>
    <RenderAmountInput
      preFill={[Function]}
      state={
        Object {
          "fund": "main",
          "id": "test",
        }
      }>
      <div
        className="display-block">
        <h3
          className="undefined push-half-bottom push-half-right display-inline-block">
          with
        </h3>
        <Input
          classes={
            Array [
              "soft-bottom",
              "input--active",
              "display-inline-block",
            ]
          }
          hideLabel={true}
          id="test"
          inputClasses="outlined--dotted outlined--light h3 hard-top flush-bottom text-dark-primary show-placeholder_1bkmqm1"
          name="main"
          placeholder="$0.00"
          style={
            Object {
              "maxWidth": "150px",
            }
          }
          type="tel">
          <div
            className="input soft-bottom input--active display-inline-block"
            data-spec="input-wrapper"
            style={
              Object {
                "maxWidth": "150px",
              }
            }>
            <RenderLabel
              hideLabel={true}
              id="test"
              name="main" />
            <input
              className="outlined--dotted outlined--light h3 hard-top flush-bottom text-dark-primary show-placeholder_1bkmqm1"
              data-spec="input"
              id="test"
              maxLength=""
              name="main"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="$0.00"
              style={
                Object {
                  "maxWidth": "150px",
                }
              }
              type="tel" />
          </div>
        </Input>
      </div>
    </RenderAmountInput>
  </div>
</Layout>
`;

exports[`test should accept preFill function thru prop 1`] = `
<Layout
  accounts={
    Array [
      Object {
        "value": "main fund",
      },
    ]
  }
  preFill={[Function]}
  state={
    Object {
      "fund": "main",
      "id": "test",
    }
  }>
  <div>
    <div
      className="display-inline-block push-half-bottom h3 push-half-right undefined">
      and give to
    </div>
    <Select
      classes={
        Array [
          "soft-bottom",
          "display-inline-block",
          "select_1rryh47",
        ]
      }
      deselect={true}
      hideLabel={true}
      id="test_select"
      includeBlank={true}
      inputClasses="undefined outlined--dotted outlined--light h3 hard-top flush-bottom"
      items={
        Array [
          Object {
            "value": "main fund",
          },
        ]
      }
      name="select-account"
      placeholder="select fund">
      <div
        className="input soft-bottom display-inline-block select_1rryh47 select_15p0e27">
        <select
          className="undefined outlined--dotted outlined--light h3 hard-top flush-bottom"
          id="test_select"
          name="select-account"
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="select fund">
          <option
            style={
              Object {
                "display": "none",
              }
            }>
            select fund
          </option>
          <option />
          <option
            value="main fund">
            main fund
          </option>
        </select>
      </div>
    </Select>
    <RenderAmountInput
      preFill={[Function]}
      state={
        Object {
          "fund": "main",
          "id": "test",
        }
      }>
      <div
        className="display-block">
        <h3
          className="undefined push-half-bottom push-half-right display-inline-block">
          with
        </h3>
        <Input
          classes={
            Array [
              "soft-bottom",
              "input--active",
              "display-inline-block",
            ]
          }
          defaultValue="returned"
          hideLabel={true}
          id="test"
          inputClasses="outlined--dotted outlined--light h3 hard-top flush-bottom text-dark-primary show-placeholder_1bkmqm1"
          name="main"
          placeholder="$0.00"
          style={
            Object {
              "maxWidth": "150px",
            }
          }
          type="tel">
          <div
            className="input input--active soft-bottom input--active display-inline-block"
            data-spec="input-wrapper"
            style={
              Object {
                "maxWidth": "150px",
              }
            }>
            <RenderLabel
              hideLabel={true}
              id="test"
              name="main" />
            <input
              className="outlined--dotted outlined--light h3 hard-top flush-bottom text-dark-primary show-placeholder_1bkmqm1"
              data-spec="input"
              defaultValue="returned"
              id="test"
              maxLength=""
              name="main"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="$0.00"
              style={
                Object {
                  "maxWidth": "150px",
                }
              }
              type="tel" />
          </div>
        </Input>
      </div>
    </RenderAmountInput>
  </div>
</Layout>
`;

exports[`test should accept saveFund function thru prop 1`] = `
<Layout
  accounts={
    Array [
      Object {
        "value": "main fund",
      },
    ]
  }
  preFill={[Function]}
  saveFund={[Function]}
  state={
    Object {
      "fund": "main",
      "id": "test",
    }
  }>
  <div>
    <div
      className="display-inline-block push-half-bottom h3 push-half-right undefined">
      and give to
    </div>
    <Select
      classes={
        Array [
          "soft-bottom",
          "display-inline-block",
          "select_1rryh47",
        ]
      }
      deselect={true}
      hideLabel={true}
      id="test_select"
      includeBlank={true}
      inputClasses="undefined outlined--dotted outlined--light h3 hard-top flush-bottom"
      items={
        Array [
          Object {
            "value": "main fund",
          },
        ]
      }
      name="select-account"
      placeholder="select fund">
      <div
        className="input soft-bottom display-inline-block select_1rryh47 select_15p0e27">
        <select
          className="undefined outlined--dotted outlined--light h3 hard-top flush-bottom"
          id="test_select"
          name="select-account"
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="select fund">
          <option
            style={
              Object {
                "display": "none",
              }
            }>
            select fund
          </option>
          <option />
          <option
            value="main fund">
            main fund
          </option>
        </select>
      </div>
    </Select>
    <RenderAmountInput
      preFill={[Function]}
      state={
        Object {
          "fund": "main",
          "id": "test",
        }
      }>
      <div
        className="display-block">
        <h3
          className="undefined push-half-bottom push-half-right display-inline-block">
          with
        </h3>
        <Input
          classes={
            Array [
              "soft-bottom",
              "input--active",
              "display-inline-block",
            ]
          }
          hideLabel={true}
          id="test"
          inputClasses="outlined--dotted outlined--light h3 hard-top flush-bottom text-dark-primary show-placeholder_1bkmqm1"
          name="main"
          placeholder="$0.00"
          style={
            Object {
              "maxWidth": "150px",
            }
          }
          type="tel">
          <div
            className="input soft-bottom input--active display-inline-block"
            data-spec="input-wrapper"
            style={
              Object {
                "maxWidth": "150px",
              }
            }>
            <RenderLabel
              hideLabel={true}
              id="test"
              name="main" />
            <input
              className="outlined--dotted outlined--light h3 hard-top flush-bottom text-dark-primary show-placeholder_1bkmqm1"
              data-spec="input"
              id="test"
              maxLength=""
              name="main"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="$0.00"
              style={
                Object {
                  "maxWidth": "150px",
                }
              }
              type="tel" />
          </div>
        </Input>
      </div>
    </RenderAmountInput>
  </div>
</Layout>
`;

exports[`test should accept selectVal function thru prop 1`] = `
<Layout
  accounts={
    Array [
      Object {
        "value": "main fund",
      },
    ]
  }
  preFill={[Function]}
  selectVal="hi"
  state={
    Object {
      "fund": "main",
      "id": "test",
    }
  }>
  <div>
    <div
      className="display-inline-block push-half-bottom h3 push-half-right undefined">
      and give to
    </div>
    <Select
      classes={
        Array [
          "soft-bottom",
          "display-inline-block",
          "select_1rryh47",
        ]
      }
      deselect={true}
      hideLabel={true}
      id="test_select"
      includeBlank={true}
      inputClasses="undefined outlined--dotted outlined--light h3 hard-top flush-bottom"
      items={
        Array [
          Object {
            "value": "main fund",
          },
        ]
      }
      name="select-account"
      placeholder="select fund"
      selected="hi">
      <div
        className="input soft-bottom display-inline-block select_1rryh47 input--active select_15p0e27">
        <select
          className="undefined outlined--dotted outlined--light h3 hard-top flush-bottom"
          id="test_select"
          name="select-account"
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="select fund"
          value="hi">
          <option
            style={
              Object {
                "display": "none",
              }
            }>
            select fund
          </option>
          <option />
          <option
            value="main fund">
            main fund
          </option>
        </select>
      </div>
    </Select>
    <RenderAmountInput
      preFill={[Function]}
      state={
        Object {
          "fund": "main",
          "id": "test",
        }
      }>
      <div
        className="display-block">
        <h3
          className="undefined push-half-bottom push-half-right display-inline-block">
          with
        </h3>
        <Input
          classes={
            Array [
              "soft-bottom",
              "input--active",
              "display-inline-block",
            ]
          }
          hideLabel={true}
          id="test"
          inputClasses="outlined--dotted outlined--light h3 hard-top flush-bottom text-dark-primary show-placeholder_1bkmqm1"
          name="main"
          placeholder="$0.00"
          style={
            Object {
              "maxWidth": "150px",
            }
          }
          type="tel">
          <div
            className="input soft-bottom input--active display-inline-block"
            data-spec="input-wrapper"
            style={
              Object {
                "maxWidth": "150px",
              }
            }>
            <RenderLabel
              hideLabel={true}
              id="test"
              name="main" />
            <input
              className="outlined--dotted outlined--light h3 hard-top flush-bottom text-dark-primary show-placeholder_1bkmqm1"
              data-spec="input"
              id="test"
              maxLength=""
              name="main"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="$0.00"
              style={
                Object {
                  "maxWidth": "150px",
                }
              }
              type="tel" />
          </div>
        </Input>
      </div>
    </RenderAmountInput>
  </div>
</Layout>
`;

exports[`test should accept state prop with id and fund 1`] = `
<Layout
  accounts={
    Array [
      Object {
        "value": "main fund",
      },
    ]
  }
  preFill={[Function]}
  state={
    Object {
      "fund": "dis-cool-account",
      "id": "dis-account",
    }
  }>
  <div>
    <div
      className="display-inline-block push-half-bottom h3 push-half-right undefined">
      and give to
    </div>
    <Select
      classes={
        Array [
          "soft-bottom",
          "display-inline-block",
          "select_1rryh47",
        ]
      }
      deselect={true}
      hideLabel={true}
      id="dis-account_select"
      includeBlank={true}
      inputClasses="undefined outlined--dotted outlined--light h3 hard-top flush-bottom"
      items={
        Array [
          Object {
            "value": "main fund",
          },
        ]
      }
      name="select-account"
      placeholder="select fund">
      <div
        className="input soft-bottom display-inline-block select_1rryh47 select_15p0e27">
        <select
          className="undefined outlined--dotted outlined--light h3 hard-top flush-bottom"
          id="dis-account_select"
          name="select-account"
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="select fund">
          <option
            style={
              Object {
                "display": "none",
              }
            }>
            select fund
          </option>
          <option />
          <option
            value="main fund">
            main fund
          </option>
        </select>
      </div>
    </Select>
    <RenderAmountInput
      preFill={[Function]}
      state={
        Object {
          "fund": "dis-cool-account",
          "id": "dis-account",
        }
      }>
      <div
        className="display-block">
        <h3
          className="undefined push-half-bottom push-half-right display-inline-block">
          with
        </h3>
        <Input
          classes={
            Array [
              "soft-bottom",
              "input--active",
              "display-inline-block",
            ]
          }
          hideLabel={true}
          id="dis-account"
          inputClasses="outlined--dotted outlined--light h3 hard-top flush-bottom text-dark-primary show-placeholder_1bkmqm1"
          name="dis-cool-account"
          placeholder="$0.00"
          style={
            Object {
              "maxWidth": "150px",
            }
          }
          type="tel">
          <div
            className="input soft-bottom input--active display-inline-block"
            data-spec="input-wrapper"
            style={
              Object {
                "maxWidth": "150px",
              }
            }>
            <RenderLabel
              hideLabel={true}
              id="dis-account"
              name="dis-cool-account" />
            <input
              className="outlined--dotted outlined--light h3 hard-top flush-bottom text-dark-primary show-placeholder_1bkmqm1"
              data-spec="input"
              id="dis-account"
              maxLength=""
              name="dis-cool-account"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="$0.00"
              style={
                Object {
                  "maxWidth": "150px",
                }
              }
              type="tel" />
          </div>
        </Input>
      </div>
    </RenderAmountInput>
  </div>
</Layout>
`;

exports[`test should render with minimal props 1`] = `
<Layout
  accounts={
    Array [
      Object {
        "value": "main fund",
      },
    ]
  }
  preFill={[Function]}
  state={
    Object {
      "fund": "main",
      "id": "test",
    }
  }>
  <div>
    <div
      className="display-inline-block push-half-bottom h3 push-half-right undefined">
      and give to
    </div>
    <Select
      classes={
        Array [
          "soft-bottom",
          "display-inline-block",
          "select_1rryh47",
        ]
      }
      deselect={true}
      hideLabel={true}
      id="test_select"
      includeBlank={true}
      inputClasses="undefined outlined--dotted outlined--light h3 hard-top flush-bottom"
      items={
        Array [
          Object {
            "value": "main fund",
          },
        ]
      }
      name="select-account"
      placeholder="select fund">
      <div
        className="input soft-bottom display-inline-block select_1rryh47 select_15p0e27">
        <select
          className="undefined outlined--dotted outlined--light h3 hard-top flush-bottom"
          id="test_select"
          name="select-account"
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="select fund">
          <option
            style={
              Object {
                "display": "none",
              }
            }>
            select fund
          </option>
          <option />
          <option
            value="main fund">
            main fund
          </option>
        </select>
      </div>
    </Select>
    <RenderAmountInput
      preFill={[Function]}
      state={
        Object {
          "fund": "main",
          "id": "test",
        }
      }>
      <div
        className="display-block">
        <h3
          className="undefined push-half-bottom push-half-right display-inline-block">
          with
        </h3>
        <Input
          classes={
            Array [
              "soft-bottom",
              "input--active",
              "display-inline-block",
            ]
          }
          hideLabel={true}
          id="test"
          inputClasses="outlined--dotted outlined--light h3 hard-top flush-bottom text-dark-primary show-placeholder_1bkmqm1"
          name="main"
          placeholder="$0.00"
          style={
            Object {
              "maxWidth": "150px",
            }
          }
          type="tel">
          <div
            className="input soft-bottom input--active display-inline-block"
            data-spec="input-wrapper"
            style={
              Object {
                "maxWidth": "150px",
              }
            }>
            <RenderLabel
              hideLabel={true}
              id="test"
              name="main" />
            <input
              className="outlined--dotted outlined--light h3 hard-top flush-bottom text-dark-primary show-placeholder_1bkmqm1"
              data-spec="input"
              id="test"
              maxLength=""
              name="main"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="$0.00"
              style={
                Object {
                  "maxWidth": "150px",
                }
              }
              type="tel" />
          </div>
        </Input>
      </div>
    </RenderAmountInput>
  </div>
</Layout>
`;
